--- a/qdot-3d.ipynb
+++ b/qdot-3d.ipynb
@@ -38,6 +38,7 @@
     "L_list = [8]#,10,12]\n",
     "p1_list = np.linspace(0.002,0.05,10)\n",
     "# p2 = 0.003\n",
+    "# p2Q = p2\n",
     "fail_prob_z0 = np.zeros((len(L_list),len(p1_list)))\n",
     "\n",
     "for i_L, r in enumerate(L_list):\n",
@@ -72,10 +73,10 @@
     "    for i_p, p1 in enumerate(p1_list):\n",
     "        # z flip error\n",
     "        p2 = p1\n",
-    "        prob_x_axis = (2+2/3)*p1 + 40/15*p2\n",
-    "        prob_y_axis = 2*p1 + 32/15*p2\n",
+    "        prob_x_axis = (2+2/3)*p1 + 32/15*p2 + 8/15*p2Q\n",
+    "        prob_y_axis = 2*p1 + 16/15*(p2+p2Q)\n",
     "        prob_z_axis = prob_y_axis\n",
-    "        p2_x = 12/15*p2\n",
+    "        p2_x = 4/15*p2 + 8/15*p2Q\n",
     "        p2_y = 4/15*p2\n",
     "        p2_z = p2_y\n",
     "\n",
