--- a/pp_th_qdot_size.ipynb
+++ b/pp_th_qdot_size.ipynb
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 105,
    "id": "499635ea-6f24-4ba4-83a1-23775aa09852",
    "metadata": {},
    "outputs": [
@@ -677,16 +677,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "540.0495994043264\n"
+      "540.0495994043264\n",
+      "7.473684210526316\n"
      ]
     }
    ],
    "source": [
-    "λ = 0.2 # dB/km optical fiber loss\n",
+    "λ = .2 # dB/km optical fiber loss\n",
     "τ= 0.1 # nsec\n",
     "speed = 2.13e8 # m/s\n",
     "L = np.abs( 10/(λ*speed*1e-3*τ*1e-9) *np.log10(1-0.2488)  )**0.5\n",
-    "print(L )\n"
+    "print(L )\n",
+    "\n",
+    "τ1 = 5.7e-3/(λ*speed*1e-3)\n",
+    "print(1/τ1/1e6)"
    ]
   },
   {
